NetBSD Problem Report #52600

From gson@gson.org  Sun Oct  8 08:29:31 2017
Return-Path: <gson@gson.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 519C57A210
	for <gnats-bugs@gnats.NetBSD.org>; Sun,  8 Oct 2017 08:29:31 +0000 (UTC)
Message-Id: <20171008082925.D4454989E62@guava.gson.org>
Date: Sun,  8 Oct 2017 11:29:25 +0300 (EEST)
From: gson@gson.org (Andreas Gustafsson)
Reply-To: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@NetBSD.org
Subject: Recent regression in resize_ffs tests
X-Send-Pr-Version: 3.95

>Number:         52600
>Category:       bin
>Synopsis:       Recent regression in resize_ffs tests
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    mlelstv
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Oct 08 08:30:00 +0000 2017
>Closed-Date:    Tue Oct 10 06:58:32 +0000 2017
>Last-Modified:  Tue Oct 24 09:10:01 +0000 2017
>Originator:     Andreas Gustafsson
>Release:        NetBSD-current, source date >= 2017.10.01.07.18.39
>Organization:

>Environment:
System: NetBSD
Architecture: i386
Machine: i386
>Description:

The test cases

  sbin/resize_ffs/t_grow:grow_16M_v2_32768
  sbin/resize_ffs/t_grow_swapped:grow_16M_v2_8192

started failing with this commit:

  2017.10.01.07.18.39 mlelstv src/sbin/resize_ffs/resize_ffs.c 1.51

on at least i386, amd64, and sparc.

Log output from the latest run is at:

  http://releng.netbsd.org/b5reports/sparc/build/2017.10.06.13.00.57/test.html#sbin_resize_ffs_t_grow_grow_16M_v2_32768
  http://releng.netbsd.org/b5reports/sparc/build/2017.10.06.13.00.57/test.html#sbin_resize_ffs_t_grow_swapped_grow_16M_v2_8192

>How-To-Repeat:

Run the tests.

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->mlelstv
Responsible-Changed-By: gson@NetBSD.org
Responsible-Changed-When: Sun, 08 Oct 2017 08:32:11 +0000
Responsible-Changed-Why:
Over to committer


From: "Michael van Elst" <mlelstv@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52600 CVS commit: src/sbin/resize_ffs
Date: Mon, 9 Oct 2017 05:24:26 +0000

 Module Name:	src
 Committed By:	mlelstv
 Date:		Mon Oct  9 05:24:26 UTC 2017

 Modified Files:
 	src/sbin/resize_ffs: resize_ffs.c

 Log Message:
 Fix computation of left-over fragments also for ufs2.

 Fixes PR 52600.


 To generate a diff of this commit:
 cvs rdiff -u -r1.52 -r1.53 src/sbin/resize_ffs/resize_ffs.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: gson@NetBSD.org
State-Changed-When: Tue, 10 Oct 2017 06:58:32 +0000
State-Changed-Why:
Fixed by mlelstv in resize_ffs.c 1.53, thanks!


From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52600 CVS commit: [netbsd-7-0] src/sbin/resize_ffs
Date: Mon, 23 Oct 2017 19:24:33 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Mon Oct 23 19:24:33 UTC 2017

 Modified Files:
 	src/sbin/resize_ffs [netbsd-7-0]: resize_ffs.8 resize_ffs.c

 Log Message:
 Pull up following revision(s) (requested by sborrill in ticket #1516):
 	sbin/resize_ffs/resize_ffs.8: revision 1.18
 	sbin/resize_ffs/resize_ffs.c: revision 1.48-1.53
 Fix the most obvious integer overflow errors which can lead to superblock
 corruption. Thanks to riastradh@
 --
 Use int64_t for loop index so we don't iterate forever/until trap.
 --
 Fix the syntax (pointed out by David H. Gutteridge on source-changes-d).
 Fix the build...
 --
 - More fixes to use 64bit offsets.
 - Compute left-over fragments also for FFS2.
 --
 PR/52590: David H. Gutteridge: Minor documentation improvements
 --
 Fix computation of left-over fragments also for ufs2.
 Fixes PR 52600.


 To generate a diff of this commit:
 cvs rdiff -u -r1.13.20.1 -r1.13.20.1.2.1 src/sbin/resize_ffs/resize_ffs.8
 cvs rdiff -u -r1.38.6.1 -r1.38.6.1.2.1 src/sbin/resize_ffs/resize_ffs.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52600 CVS commit: [netbsd-7-1] src/sbin/resize_ffs
Date: Mon, 23 Oct 2017 19:24:35 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Mon Oct 23 19:24:35 UTC 2017

 Modified Files:
 	src/sbin/resize_ffs [netbsd-7-1]: resize_ffs.8 resize_ffs.c

 Log Message:
 Pull up following revision(s) (requested by sborrill in ticket #1516):
 	sbin/resize_ffs/resize_ffs.8: revision 1.18
 	sbin/resize_ffs/resize_ffs.c: revision 1.48-1.53
 Fix the most obvious integer overflow errors which can lead to superblock
 corruption. Thanks to riastradh@
 --
 Use int64_t for loop index so we don't iterate forever/until trap.
 --
 Fix the syntax (pointed out by David H. Gutteridge on source-changes-d).
 Fix the build...
 --
 - More fixes to use 64bit offsets.
 - Compute left-over fragments also for FFS2.
 --
 PR/52590: David H. Gutteridge: Minor documentation improvements
 --
 Fix computation of left-over fragments also for ufs2.
 Fixes PR 52600.


 To generate a diff of this commit:
 cvs rdiff -u -r1.13.20.1 -r1.13.20.1.6.1 src/sbin/resize_ffs/resize_ffs.8
 cvs rdiff -u -r1.38.6.2 -r1.38.6.2.2.1 src/sbin/resize_ffs/resize_ffs.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52600 CVS commit: [netbsd-7] src/sbin/resize_ffs
Date: Mon, 23 Oct 2017 19:24:37 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Mon Oct 23 19:24:37 UTC 2017

 Modified Files:
 	src/sbin/resize_ffs [netbsd-7]: resize_ffs.8 resize_ffs.c

 Log Message:
 Pull up following revision(s) (requested by sborrill in ticket #1516):
 	sbin/resize_ffs/resize_ffs.8: revision 1.18
 	sbin/resize_ffs/resize_ffs.c: revision 1.48-1.53
 Fix the most obvious integer overflow errors which can lead to superblock
 corruption. Thanks to riastradh@
 --
 Use int64_t for loop index so we don't iterate forever/until trap.
 --
 Fix the syntax (pointed out by David H. Gutteridge on source-changes-d).
 Fix the build...
 --
 - More fixes to use 64bit offsets.
 - Compute left-over fragments also for FFS2.
 --
 PR/52590: David H. Gutteridge: Minor documentation improvements
 --
 Fix computation of left-over fragments also for ufs2.
 Fixes PR 52600.


 To generate a diff of this commit:
 cvs rdiff -u -r1.13.20.1 -r1.13.20.2 src/sbin/resize_ffs/resize_ffs.8
 cvs rdiff -u -r1.38.6.2 -r1.38.6.3 src/sbin/resize_ffs/resize_ffs.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52600 CVS commit: [netbsd-8] src/sbin/resize_ffs
Date: Tue, 24 Oct 2017 09:08:40 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Tue Oct 24 09:08:40 UTC 2017

 Modified Files:
 	src/sbin/resize_ffs [netbsd-8]: resize_ffs.8 resize_ffs.c

 Log Message:
 Pull up following revision(s) (requested by sborrill in ticket #308):
 	sbin/resize_ffs/resize_ffs.8: revision 1.18
 	sbin/resize_ffs/resize_ffs.c: revision 1.48-1.53
 Fix the most obvious integer overflow errors which can lead to superblock
 corruption. Thanks to riastradh@
 --
 Use int64_t for loop index so we don't iterate forever/until trap.
 --
 Fix the syntax (pointed out by David H. Gutteridge on source-changes-d).
 Fix the build...
 --
 - More fixes to use 64bit offsets.
 - Compute left-over fragments also for FFS2.
 --
 PR/52590: David H. Gutteridge: Minor documentation improvements
 --
 Fix computation of left-over fragments also for ufs2.
 Fixes PR 52600.


 To generate a diff of this commit:
 cvs rdiff -u -r1.17 -r1.17.6.1 src/sbin/resize_ffs/resize_ffs.8
 cvs rdiff -u -r1.47 -r1.47.6.1 src/sbin/resize_ffs/resize_ffs.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.