Fix computation of left-over fragments also for ufs2.

Fixes PR 52600.